// Copyright 2015 gRPC authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

option go_package = "remote-build/remote-build";
package remote_build;

//Server to Worker
service Server_worker {
  // Sends a greeting
  rpc  HelloWorker(WorkRequest) returns (WorkResponce) {}
}

// The request message containing the user's name.
message WorkRequest {
  string name = 1;
}

// The response message containing the greetings
message WorkResponce {
  string message = 1;
}




//Clinet to Server
service Client_server {
  rpc HelloServer(BuildRequest) returns (BuildResponse) {}
}

message BuildRequest {
  string name = 1;
}

message BuildResponse {
  string message = 1;
}